src/objects/Everstring_Lead_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Everstring_Lead_API_Name__c</fullName>
        <label>Everstring Lead API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Lead_API_Name__c</fullName>
        <label>SFDC Lead API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Everstring Lead Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Lead_API_Name__c</columns>
        <columns>Everstring_Lead_API_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LFM-{0000}</displayFormat>
        <label>Everstring Lead Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Everstring Lead Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>